# orchestration-data-pipelines-lab

./: .gitignore  Makefile  PACKAGE_NOTES.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: pipeline-tests.yml
airflow/dags/: raw_to_mart_dag.py
azure_data_factory/: pipeline_design.md
azure_data_factory/json_pipeline_examples/: raw_to_mart_pipeline.json
dagster/: assets.py
data/: generate_synthetic_data.py
docs/: ai_augmented_workflow.md  architecture.md  validation_first_orchestration.md
monitoring/: alerting_strategy.md  run_metadata_schema.md
prefect/flows/: raw_to_mart_flow.py
shared/: error_handling.py  local_pipeline_simulator.py  pipeline_logging.py  retry_patterns.md
src/analytics_pipeline/: __init__.py  cli.py  config.py  errors.py  ingest.py  logging_utils.py  pipeline.py  publish.py  retry.py  transform.py  validate.py
ssis/: ssis_concept_mapping.md
tests/: test_pipeline.py
validation/: VALIDATION_SUMMARY.md  run_scenarios.py
