[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orchestration-data-pipelines-lab"
version = "0.1.0"
description = "Tool-agnostic supply-chain analytics orchestration lab"
requires-python = ">=3.10"
dependencies = ["pandas>=2.0,<3.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
